<resources>
    <string name="app_name">Banking App</string>
    <string name="network_error">Network Error</string>
    <string name="response_error">Something went wrong</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="not_found">Not found</string>
    <string name="internal_err">Internal Server Error</string>
    <string name="svc_un_avail">Service Unavailable</string>
    <string name="connection_error">Failed to connect</string>
    <string name="timeout">Timeout</string>
    <string name="description">description</string>
    <string name="no_data">No Data</string>
    <string name="malformed">Malformed Data</string>
    <string name="available_header">Available</string>
    <string name="balance_label">Balance</string>
    <string name="pending_label">Pending</string>
    <string name="transaction_pending_label">PENDING:\u0020</string>
    <string name="negative_amount_format">-$%s</string>
    <string name="positive_amount_format">$%s</string>
    <string name="bsb_label">BSB\u0020\u0020</string>
    <string name="account_label">Account\u0020\u0020</string>
    <string name="date_group_title">%1$s %2$s ago</string>
    <string name="today_label">Today</string>
    <string name="refresh_menu_label">Refresh</string>
    <string name="bsb_account_content_description">B S B: %1$s, Account: %2$s</string>
    <string name="pending_transaction_title">Pending Transaction</string>
    <string name="transaction_description_label">Transaction Description</string>
    <string name="transaction_date_label">Transaction Date</string>
    <string name="transaction_category_label">Transaction Category</string>

    <string name="atm_name_label">ATM Name</string>
    <string name="atm_location_label">ATM Address</string>
    <string name="date_content_description"></string>
</resources>